[gd_scene load_steps=25 format=2]

[ext_resource path="res://colored-transparent_packed.png" type="Texture" id=1]
[ext_resource path="res://World/World.gd" type="Script" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://SFX/spawn.wav" type="AudioStream" id=5]
[ext_resource path="res://SFX/die.wav" type="AudioStream" id=6]

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 12, 12, 4, 12, 4, 4, 12, 4 )

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=17]
0/name = "colored-transparent_packed.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 32, 224, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 18 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "colored-transparent_packed.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 128, 48 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 5, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 1 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[node name="World" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 17 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 1, 65536, 1, 1, 65536, 2, 1, 65536, 3, 1, 65536, 4, 1, 65536, 5, 1, 65536, 6, 1, 65536, 7, 1, 65536, 8, 1, 65536, 9, 1, 65536, 10, 1, 65536, 11, 1, 65536, 12, 1, 65536, 13, 1, 65536, 14, 1, 65536, 15, 1, 65536, 65536, 1, 65536, 65537, 1, 65536, 65538, 1, 65536, 65539, 1, 65536, 65540, 1, 6, 65541, 1, 7, 65542, 1, 7, 65543, 1, 7, 65544, 1, 7, 65545, 1, 7, 65546, 1, 7, 65547, 1, 6, 65548, 1, 65536, 65549, 1, 65536, 65550, 1, 65536, 65551, 1, 65536, 131072, 1, 65536, 131073, 1, 65536, 131074, 1, 65536, 131075, 1, 65536, 131076, 1, 7, 131077, 1, 3, 131078, 1, 3, 131079, 1, 3, 131080, 1, 3, 131081, 1, 3, 131082, 1, 3, 131083, 1, 7, 131084, 1, 65536, 131085, 1, 65536, 131086, 1, 65536, 131087, 1, 65536, 196608, 1, 65536, 196609, 1, 65536, 196610, 1, 65536, 196611, 1, 65536, 196612, 1, 7, 196613, 1, 4, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 1, 3, 196619, 1, 7, 196620, 1, 65536, 196621, 1, 65536, 196622, 1, 65536, 196623, 1, 65536, 262144, 1, 65536, 262145, 1, 65536, 262146, 1, 65536, 262147, 1, 65536, 262148, 1, 7, 262149, 1, 3, 262150, 1, 4, 262151, 1, 3, 262152, 1, 4, 262153, 1, 3, 262154, 1, 4, 262155, 1, 7, 262156, 1, 65536, 262157, 1, 65536, 262158, 1, 65536, 262159, 1, 65536, 327680, 1, 65536, 327681, 1, 65536, 327682, 1, 65536, 327683, 1, 65536, 327684, 1, 7, 327685, 1, 4, 327686, 1, 3, 327687, 1, 4, 327688, 1, 3, 327689, 1, 4, 327690, 1, 3, 327691, 1, 7, 327692, 1, 65536, 327693, 1, 65536, 327694, 1, 65536, 327695, 1, 65536, 393216, 1, 65536, 393217, 1, 65536, 393218, 1, 65536, 393219, 1, 65536, 393220, 1, 7, 393221, 1, 3, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 1, 4, 393227, 1, 7, 393228, 1, 65536, 393229, 1, 65536, 393230, 1, 65536, 393231, 1, 65536, 458752, 1, 65536, 458753, 1, 65536, 458754, 1, 65536, 458755, 1, 65536, 458756, 1, 7, 458757, 1, 3, 458758, 1, 3, 458759, 1, 3, 458760, 1, 3, 458761, 1, 3, 458762, 1, 3, 458763, 1, 7, 458764, 1, 65536, 458765, 1, 65536, 458766, 1, 65536, 458767, 1, 65536, 524288, 1, 65536, 524289, 1, 65536, 524290, 1, 65536, 524291, 1, 65536, 524292, 1, 6, 524293, 1, 7, 524294, 1, 7, 524295, 1, 7, 524296, 1, 7, 524297, 1, 7, 524298, 1, 7, 524299, 1, 6, 524300, 1, 65536, 524301, 1, 65536, 524302, 1, 65536, 524303, 1, 65536, 589824, 1, 65536, 589825, 1, 65536, 589826, 1, 65536, 589827, 1, 65536, 589828, 1, 65536, 589829, 1, 65536, 589830, 1, 65536, 589831, 1, 65536, 589832, 1, 65536, 589833, 1, 65536, 589834, 1, 65536, 589835, 1, 65536, 589836, 1, 65536, 589837, 1, 65536, 589838, 1, 65536, 589839, 1, 65536 )
__meta__ = {
"_edit_group_": true
}

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 112, 64 )

[node name="Tombs" type="Node2D" parent="."]

[node name="Tomb1" type="Position2D" parent="Tombs"]
position = Vector2( 96, 48 )

[node name="Tomb2" type="Position2D" parent="Tombs"]
position = Vector2( 112, 48 )

[node name="Tomb3" type="Position2D" parent="Tombs"]
position = Vector2( 128, 48 )

[node name="Tomb4" type="Position2D" parent="Tombs"]
position = Vector2( 144, 48 )

[node name="Tomb5" type="Position2D" parent="Tombs"]
position = Vector2( 96, 96 )

[node name="Tomb6" type="Position2D" parent="Tombs"]
position = Vector2( 112, 96 )

[node name="Tomb7" type="Position2D" parent="Tombs"]
position = Vector2( 128, 96 )

[node name="Tomb8" type="Position2D" parent="Tombs"]
position = Vector2( 144, 96 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource( 4 )]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="SpawnAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DieAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
